Solutions Architect - Associate/8.09: Set Up a WordPress Site Using EC2 and RDS/rds.tf
resource "aws_db_instance" "rds" {
  identifier             = "aws-tf"
  allocated_storage      = 10
  engine                 = "mysql"
  engine_version         = "5.7"
  instance_class         = "db.t3.micro"
  name                   = "mydb"
  username               = "foo"
  password               = "foobarbaz"
  parameter_group_name   = "default.mysql5.7"
  skip_final_snapshot    = true
  apply_immediately      = true
  vpc_security_group_ids = [aws_security_group.rds.id]
}

output "rds" {
  value = "mysql -u foo -p -h ${aws_db_instance.rds.address}\n"
}
